gcc/testsuite/g++.dg/pph/y8inc-nmspc.cc
namespace smother {
#include "x1struct1.h" // { dg-error "PPH file .* not included at global scope" "" }
}
